refactor(spring-poi): 엑셀 벤치마크 JVM 옵션 정리 및 file path 수정
- 로컬에서만 성능 검증하기 위해 disable 선언